--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Hello, Ramakrishna Sanika</title>
+    <title>Hello Ramakrishna Sanika</title>
   </head>
   <body>
     <h1>Hello, Ramakrishna Sanika</h1>
+    <h2>Hi This is my web page</h2>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
